--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^16.0.3",
     "dotenv-expand": "^10.0.0",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "mongodb": "^4.13.0"
   },
   "devDependencies": {
