--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,9 @@
-POSTGRES_USERNAME=postgres
-POSTGRES_PASSWORD=top_secret
-POSTGRES_HOST=drivent-postgres-test
-POSTGRES_PORT=5433
-POSTGRES_DATABASE=nameDataBase
+POSTGRES_USERNAME=usuario banco
+POSTGRES_PASSWORD=senha banco
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DATABASE=nome banco
 
-JWT_SECRET=example
+JWT_SECRET=chave autenticação
 
-DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
+DATABASE_URL=DATABASE_URL=postgresql://${POSTGRES_USERNAME}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DATABASE}?schema=public
